fixed header overlapping

--- a/frontend/src/style/Header.css
+++ b/frontend/src/style/Header.css
@@ -16,11 +16,13 @@
   justify-content: space-between;
   align-items: center;
   padding: 0px 20px;
-  z-index: 1000;
+  z-index: 99999;
   box-sizing: border-box;
+  background-color: #242424; 
 }
 
-.nav-links {
+
+  .nav-links {
   display: flex;
   align-items: center;
   gap: 1rem;
