--- a/frontend/src/style/Layout.css
+++ b/frontend/src/style/Layout.css
@@ -15,7 +15,8 @@ html, body {
 
 .layout > main {
     flex: 1;
-    padding-top: 80px;
+    padding-top: 0;
+    margin-top: 0;
 }
 
 
